--- a/app/src/main/res/layout/activity_choose_acard.xml
+++ b/app/src/main/res/layout/activity_choose_acard.xml
@@ -204,6 +204,7 @@
         android:layout_marginStart="5dp"
         android:layout_marginEnd="171dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@+id/imageView6"
         app:layout_constraintTop_toBottomOf="@+id/price_card_1" />
 
@@ -214,6 +215,8 @@
         android:layout_marginStart="7dp"
         android:layout_marginTop="4dp"
         android:layout_marginEnd="169dp"
+        android:layout_marginBottom="15dp"
+        app:layout_constraintBottom_toTopOf="@+id/vcard"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/imageView7"
         app:layout_constraintTop_toBottomOf="@+id/price_card_2" />
@@ -225,6 +228,8 @@
         android:layout_marginStart="1dp"
         android:layout_marginTop="3dp"
         android:layout_marginEnd="173dp"
+        android:layout_marginBottom="145dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/imageView8"
         app:layout_constraintTop_toBottomOf="@+id/price_card_3" />
