--- a/app/src/main/res/layout/activity_membership_club.xml
+++ b/app/src/main/res/layout/activity_membership_club.xml
@@ -25,46 +25,70 @@
         android:id="@+id/imageView"
         android:layout_width="148dp"
         android:layout_height="173dp"
-        app:srcCompat="@drawable/user_icon_1"
-        tools:layout_editor_absoluteX="119dp"
-        tools:layout_editor_absoluteY="134dp" />
+        android:layout_marginStart="119dp"
+        android:layout_marginTop="14dp"
+        android:layout_marginEnd="144dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/membership_club_heading"
+        app:srcCompat="@drawable/user_icon_1" />
 
     <TextView
         android:id="@+id/users_name"
         android:layout_width="153dp"
         android:layout_height="42dp"
+        android:layout_marginStart="114dp"
+        android:layout_marginTop="21dp"
+        android:layout_marginEnd="144dp"
         android:text=""
         android:textColor="#000000"
         android:textSize="70px"
-        tools:layout_editor_absoluteX="114dp"
-        tools:layout_editor_absoluteY="328dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
     <TextView
         android:id="@+id/membership_no_heading"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="79dp"
+        android:layout_marginTop="28dp"
+        android:layout_marginEnd="121dp"
+        android:layout_marginBottom="14dp"
         android:text="Membership No."
         android:textColor="#000000"
         android:textSize="75px"
-        tools:layout_editor_absoluteX="79dp"
-        tools:layout_editor_absoluteY="398dp" />
+        app:layout_constraintBottom_toTopOf="@+id/users_membership_no"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/users_name" />
 
     <TextView
         android:id="@+id/users_membership_no"
         android:layout_width="212dp"
         android:layout_height="44dp"
-        android:text=""
+        android:layout_marginStart="79dp"
+        android:layout_marginTop="14dp"
+        android:layout_marginEnd="120dp"
+        android:layout_marginBottom="127dp"
+        android:text="1242 9946 4869"
         android:textColor="#000000"
         android:textSize="70px"
-        tools:layout_editor_absoluteX="79dp"
-        tools:layout_editor_absoluteY="450dp" />
+        app:layout_constraintBottom_toTopOf="@+id/back_arrow_2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/membership_no_heading" />
 
     <ImageView
         android:id="@+id/back_arrow_2"
         android:layout_width="100dp"
         android:layout_height="109dp"
+        android:layout_marginStart="3dp"
+        android:layout_marginTop="120dp"
+        android:layout_marginEnd="308dp"
         android:onClick="BacktoHomePage1"
-        app:srcCompat="@drawable/left_arrow__1"
-        tools:layout_editor_absoluteX="3dp"
-        tools:layout_editor_absoluteY="622dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/users_membership_no"
+        app:srcCompat="@drawable/left_arrow__1" />
 </androidx.constraintlayout.widget.ConstraintLayout>
