--- a/app/src/main/res/layout/activity_product2.xml
+++ b/app/src/main/res/layout/activity_product2.xml
@@ -29,6 +29,8 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="15dp"
         android:layout_marginEnd="45dp"
+        android:layout_marginBottom="11dp"
+        app:layout_constraintBottom_toTopOf="@+id/pro2_description"
         app:layout_constraintEnd_toStartOf="@+id/pro2_spinner"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/pro2_heading"
