--- a/app/src/main/res/layout/activity_product4.xml
+++ b/app/src/main/res/layout/activity_product4.xml
@@ -6,88 +6,123 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Product4">
+
     <TextView
         android:id="@+id/pro4_1_heading"
         android:layout_width="373dp"
         android:layout_height="111dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="53dp"
+        android:layout_marginEnd="22dp"
+        android:layout_marginBottom="15dp"
         android:fontFamily="@font/alata"
         android:text="jumper Windows 11 Laptop 13.3 Inch"
         android:textColor="#000000"
         android:textSize="95px"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="53dp" />
+        app:layout_constraintBottom_toTopOf="@+id/pro4_1_image"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/pro4_1_image"
         android:layout_width="192dp"
         android:layout_height="191dp"
-        app:srcCompat="@drawable/laptop2"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="179dp" />
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="45dp"
+        android:layout_marginBottom="11dp"
+        app:layout_constraintBottom_toTopOf="@+id/pro4_description"
+        app:layout_constraintEnd_toStartOf="@+id/pro4_spinner"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/pro4_1_heading"
+        app:srcCompat="@drawable/laptop2" />
 
     <TextView
         android:id="@+id/pro4_description"
         android:layout_width="292dp"
         android:layout_height="134dp"
-        android:textColor="#000000"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="4dp"
         android:text="Laptop in Windows 11 Operating System with 64GB Storage 4GB RAM Ultrabook,1080P Display Laptops,Computer with WiFi,Bluetooth 4.2,USB
         3.0,Support 1TB SSD and 256GB TF Card Expansion,Gray"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="381dp" />
+        android:textColor="#000000"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/pro4_1_image" />
 
     <Spinner
         android:id="@+id/pro4_spinner"
         android:layout_width="119dp"
         android:layout_height="50dp"
+        android:layout_marginStart="45dp"
+        android:layout_marginTop="11dp"
+        android:layout_marginBottom="65dp"
         android:background="#ffffff"
-        tools:layout_editor_absoluteX="253dp"
-        tools:layout_editor_absoluteY="274dp" />
+        app:layout_constraintBottom_toTopOf="@+id/pro4_description"
+        app:layout_constraintStart_toEndOf="@+id/pro4_1_image"
+        app:layout_constraintTop_toBottomOf="@+id/pro4_quantity_heading" />
 
     <TextView
         android:id="@+id/pro4_quantity_heading"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="#000000"
+        android:layout_marginStart="46dp"
+        android:layout_marginTop="80dp"
+        android:layout_marginEnd="105dp"
         android:text="Quantity"
-        tools:layout_editor_absoluteX="254dp"
-        tools:layout_editor_absoluteY="237dp" />
+        android:textColor="#000000"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/pro4_1_image"
+        app:layout_constraintTop_toBottomOf="@+id/pro4_1_heading" />
 
     <ImageView
         android:id="@+id/addtoTrolley4"
         android:layout_width="123dp"
         android:layout_height="102dp"
-        app:srcCompat="@drawable/add_trolley_icon_1"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="515dp" />
+        android:layout_marginStart="16dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/pro4_description"
+        app:srcCompat="@drawable/add_trolley_icon_1" />
 
     <TextView
         android:id="@+id/pro4_addItem"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="174dp"
         android:text="Insert item to your shopping basket"
         android:textColor="#000000"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="625dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/addtoTrolley4" />
 
     <Button
         android:id="@+id/Backbutton_9"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Back"
+        android:layout_marginStart="22dp"
+        android:layout_marginTop="25dp"
+        android:layout_marginEnd="301dp"
         android:backgroundTint="#ff0000"
         android:onClick="GoBack4"
-        tools:layout_editor_absoluteX="22dp"
-        tools:layout_editor_absoluteY="669dp" />
+        android:text="Back"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/pro4_addItem" />
 
     <TextView
         android:id="@+id/pro4_price_2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="168dp"
+        android:layout_marginEnd="29dp"
         android:text="£350.99"
         android:textColor="#000000"
         android:textSize="50px"
-        tools:layout_editor_absoluteX="276dp"
-        tools:layout_editor_absoluteY="492dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/pro4_description"
+        app:layout_constraintTop_toBottomOf="@+id/pro4_spinner" />
 
     <TextView
         android:id="@+id/vat4"
@@ -102,6 +137,8 @@
         android:textSize="50px"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@+id/addtoTrolley4"
-        app:layout_constraintTop_toBottomOf="@+id/pro4_price_2" />
+        app:layout_constraintTop_toBottomOf="@+id/pro4_price_2"
+        app:layout_constraintVertical_bias="1.0" />
 </androidx.constraintlayout.widget.ConstraintLayout>
